API & program layout update
